Bug 916602 (Part 2) - Avoid null timestamp assertion when creating sentinel in FrameAnimator. r=tn